@@ -1,3 +1,9 @@
+2008-08-11  Dan Williams  <dcbw@redhat.com>
+
+	Update to match NM svn3924 vpn setting changes (consolidated vpn and
+	vpn-properties settings; vpn-specific data now a hash of string:string
+	instead of string:variant); convert old GConf entries to new format
+
 2008-08-07  Dan Williams  <dcbw@redhat.com>
 
 	* src/connection-editor/ce-page-wired.glade
